[project]
name = "cnn-vs-exact-pattern-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optax>=0.2.8",
]

[tool.uv.workspace]
members = [
    "venv",
]
